--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,4 @@ plugins:
 title: Electronic Art Blog
 description: This is the website for my 2023 spring blogs
 show_downloads: false
+logo: images/FE0152D2-50AC-46F5-9ECE-C18B20FADF11_1_105_c.jpeg
